<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TextView
            android:id="@+id/result_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_result_backup_summary" />

        <View
            android:id="@+id/result_divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/result_summary"
            android:background="@drawable/black_white_gradient" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <View
            android:id="@+id/result_divider_4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@id/result_summary"
            android:background="@drawable/black_white_gradient" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/result_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:visibility="gone" />

            <Button
                android:id="@+id/result_about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:visibility="gone" />

            <Button
                android:id="@+id/result_exit_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_app" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
